Main view html and styles; dinnerModel as an es6 class

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,43 +1,14 @@
-.dp-btn--primary {
-	background-color: darkorange;
-}
-
-.dp-container {
+.dp-main {
 	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
+	flex: 1;
 }
 
-.dp-content {
-	display: flex;
-	flex: auto;
+.dp-main .dp-main__sidebar {
+	background-color: azure;
+	flex: 0.2;
 }
 
-.dp-header {
-	align-items: center;
-	background: lightgray;
-	display: flex;
-	flex: none;
-	height: 6em;
-	justify-content: center;
-}
-
-.dp-header .dp-header__title {
-	margin: 0;
-	font-size: 2.5rem;
-}
-
-.dp-home {
-	align-items: center;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	margin: 0 auto;
-	max-width: 1024px;
-}
-
-.dp-home .dp-home__body {
-	margin: 0 50px;
-	max-width: 500px;
-	text-align: center;
+.dp-main  .dp-main__content {
+	background-color: gray;
+	flex: 0.8;
 }
