--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -11,6 +11,20 @@
 	}
 }
 
+
+
+@media (max-width: 767px) {
+	.dp-sidebar .dp-sidebar__collapsible {
+		position: absolute;
+		box-shadow: 0 2px #888;
+		background-color: white;
+		width: 100%;
+		margin-top: 41px;
+		width: 100%;
+		background-color: white;
+	}
+}
+
 .dp-sidebar .dp-sidebar__header {
 	align-items: center;
 	flex: 1;
@@ -73,4 +87,15 @@
 	.dp-sidebar .dp-sidebar__confirm {
 		padding: 0 10px 10px;
 	}
+}
+
+.dp-sidebar .dp-sidebar__dish {
+	background-color: whitesmoke;
+	border: 1px solid darkgray;
+	border-radius: 2px;
+	color: darkred;
+	display: flex;
+	justify-content: space-between;
+	margin: 5px;
+	padding: 3px 5px;
 }
