--- a/styles/commons.css
+++ b/styles/commons.css
@@ -36,6 +36,22 @@
 	font-size: 2.5rem;
 }
 
+.dp-flex {
+	display: flex;
+}
+
+.dp-flex .dp-flex-i {
+	flex: 1;
+}
+
+.dp-flex .dp-flex-col {
+	flex-direction: column;
+}
+
+.dp-flex .dp-flex-row {
+	flex-direction: row;
+}
+
 @media (max-width: 767px) {
 	.dp-header {
 		height: 3em;
