--- a/styles/details.css
+++ b/styles/details.css
@@ -1,31 +1,31 @@
 .dp-details {
-	display: flex;
-	flex: 1;
+    display: flex;
+    flex: 1;
 }
 
 @media (max-width: 767px) {
-	.dp-details {
-		flex-direction: column;
-	}
+    .dp-details {
+        flex-direction: column;
+    }
 }
 
 .dp-details .dp-details__sidebar {
-	border-right: 1px solid darkgray;
-	flex: 0.2;
+    border-right: 1px solid darkgray;
+    flex: 0.2;
 }
 
 @media (max-width: 767px) {
-	.dp-details .dp-details__sidebar {
-		border: none;
-	}
+    .dp-details .dp-details__sidebar {
+        border: none;
+    }
 }
 
 .dp-details .dp-details__content {
-	flex: 0.8;
+    flex: 0.8;
 }
 
 
-.dp-details .dp-details__dish{
+.dp-details .dp-details__dish {
     flex: 1;
     flex-direction: row;
 }
@@ -35,8 +35,8 @@
     padding-left: 30px;
 }
 
-.dp-details .dp-details__dishName > h3 {
- margin: 0;
+.dp-details .dp-details__dishName>h3 {
+    margin: 0;
 }
 
 .dp-details .dp-details__dishImage {
@@ -46,14 +46,20 @@
     padding-right: 30px;
 }
 
+.dp-details .dp-details__dishImage>img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+}
+
 @media (max-width: 767px) {
-	.dp-details .dp-details__dishImage {
+    .dp-details .dp-details__dishImage {
         padding: 0;
     }
 
-    .dp-details .dp-details__dishImage > img {
+    .dp-details .dp-details__dishImage>img {
         width: 100%;
-	}
+    }
 }
 
 .dp-details .dp-details__description {
@@ -63,7 +69,7 @@
 }
 
 @media (max-width: 767px) {
-	.dp-details .dp-details__description {
+    .dp-details .dp-details__description {
         padding: 20px;
     }
 }
@@ -73,13 +79,13 @@
     padding: 30px;
 }
 
-.dp-details .dp-details__backBtn > a > button {
+.dp-details .dp-details__backBtn>a>button {
     border-bottom-left-radius: 30px;
     border-top-left-radius: 30px;
 }
 
 @media (max-width: 767px) {
-	.dp-details .dp-details__backBtn {
+    .dp-details .dp-details__backBtn {
         padding: 0 20px;
     }
 }
@@ -103,7 +109,7 @@
     margin-top: 20px;
 }
 
-.dp-details .dp-details__ingredientsContent{
+.dp-details .dp-details__ingredientsContent {
     padding-left: 10px;
 
 
@@ -146,7 +152,7 @@
     font-size: 12px;
 }
 
-.dp-details .dp-details__ingredientsTotalCurr{
+.dp-details .dp-details__ingredientsTotalCurr {
     display: flex;
     flex: 0.2;
     font-weight: 300;
