Added first controllers and refactored views as pure js functions

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -23,6 +23,11 @@
 		width: 100%;
 		background-color: white;
 	}
+
+	.dp-sidebar
+	.dp-sidebar__collapsible.dp-sidebar__collapsible_closed {
+		display: none;
+	}
 }
 
 .dp-sidebar .dp-sidebar__header {
