--- a/styles/main.css
+++ b/styles/main.css
@@ -82,7 +82,7 @@
 	display: flex;
 	flex-direction: column;
 	margin: 20px;
-	max-width: 140px;
+	width: 215px;
 	transition: box-shadow 100ms linear;
 }
 
@@ -106,6 +106,6 @@
 	border-top-left-radius: 2px;
 	border-top-right-radius: 2px;
 	height: 140px;
-	max-width: 100%;
+	width: 100%;
 	object-fit: cover;
 }
