--- a/styles/overview.css
+++ b/styles/overview.css
@@ -2,6 +2,9 @@
 	display: flex;
 	flex: 1;
 	flex-direction: column;
+	max-width: 1024px;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .dp-overview .dp-overview__top-bar {
