--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -53,7 +53,7 @@
 .dp-sidebar .dp-sidebar__people {
 	align-items: center;
 	display: flex;
-	margin: 0 20px 20px 10px;
+	margin: 10px;
 }
 
 .dp-sidebar .dp-sidebar__people-title {
@@ -107,5 +107,10 @@
 
 .dp-sidebar .dp-sidebar__dish-name {
 	flex: 1;
+}
+
+.dp-sidebar__dish-price {
+	flex: 1;
 	margin-left: 5px;
+	text-align: right;
 }
