--- a/styles/details.css
+++ b/styles/details.css
@@ -32,6 +32,7 @@
 }
 
 .dp-details .dp-details__dishName {
+    text-transform: uppercase;
     padding: 10px;
     padding-left: 30px;
 }
@@ -64,6 +65,7 @@
 }
 
 .dp-details .dp-details__description {
+    text-transform: capitalize;
     font-weight: 300;
     font-size: 12px;
     padding: 30px;
@@ -71,7 +73,7 @@
 
 @media (max-width: 767px) {
     .dp-details .dp-details__description {
-        padding: 20px;
+        padding: 500px;
     }
 }
 
