--- a/styles/commons.css
+++ b/styles/commons.css
@@ -14,6 +14,12 @@
 	flex-direction: column;
 }
 
+@media (max-width: 767px) {
+	.dp-container {
+		margin-top: 3em;
+	}
+}
+
 .dp-content {
 	display: flex;
 	flex: auto;
@@ -62,6 +68,8 @@
 @media (max-width: 767px) {
 	.dp-header {
 		height: 3em;
+		position: fixed;
+		width: 100%;
 	}
 
 	.dp-header .dp-header__title {
