--- a/styles/myDinner.css
+++ b/styles/myDinner.css
@@ -1,4 +1,4 @@
-.dp-myDinner {
+.dp-my-dinner {
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -6,7 +6,7 @@
 
 }
 
-.dp-myDinner .dp-myDinner__line {
+.dp-my-dinner .dp-my-dinner__dish {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -15,35 +15,35 @@
 }
 
 @media (max-width: 767px) {
-    .dp-myDinner .dp-myDinner__line {
+    .dp-my-dinner .dp-my-dinner__dish {
         flex-direction: column;
         padding: 0;
     }
 }
 
-.dp-myDinner .dp-myDinner__picContain {
+.dp-my-dinner .dp-my-dinner__img-container {
     display: flex;
     flex: 0.2;
 
 }
 
-.dp-myDinner .dp-myDinner__image {
-    flex: .5;
+.dp-my-dinner .dp-my-dinner__img {
     max-width: 100%;
     height: 150px;
     object-fit: cover;
     border: 2px solid;
+    margin: 0 20px;
 }
 
 @media (max-width: 767px) {
-    .dp-myDinner .dp-myDinner__image {
+    .dp-my-dinner .dp-my-dinner__img {
         flex: 1;
         height: 200px;
         border: none;
     }
 }
 
-.dp-myDinner .dp-myDinner__dinnerDetails { 
+.dp-my-dinner .dp-my-dinner__details {
     display: flex;
     flex-direction: column;
     flex: 0.3;
@@ -52,13 +52,13 @@
 }
 
 @media (max-width: 767px) {
-    .dp-myDinner .dp-myDinner__dinnerDetails {
+    .dp-my-dinner .dp-my-dinner__details {
         margin: 20px;
     }
 
 }
 
-.dp-myDinner .dp-myDinner__dinnerDiscription {
+.dp-my-dinner .dp-my-dinner__description {
     font-weight: 300;
     font-size: small;
     display: flex;
@@ -69,27 +69,17 @@
 }
 
 @media (max-width: 767px) {
-    .dp-myDinner .dp-myDinner__dinnerDiscription {
+    .dp-my-dinner .dp-my-dinner__description {
         padding: 0;
         margin: 20px;
 
     }
 }
 
-.dp-myDinner .dp-myDinner__top-bar {
-	align-items: center;
-	border-bottom: 1px solid darkgray;
-	display: flex;
-	justify-content: space-between;
-	padding: 10px 20px;
+.dp-my-dinner .dp-my-dinner__name {
+    text-transform: uppercase;
 }
 
-.dp-myDinner .dp-myDinner__back-btn {
-	border-bottom-left-radius: 30px;
-    border-top-left-radius: 30px;
-}
-
-.dp-myDinner .dp-myDinner__guests {
-	font-weight: 300;
-	margin: 0;
+.dp-my-dinner .dp-my-dinner__type {
+    text-transform: capitalize;
 }
