--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -7,6 +7,7 @@
 @media (max-width: 767px) {
 	.dp-sidebar {
 		border-bottom: 1px solid darkgray;
+		height: 3em;
 		padding: 0;
 	}
 }
@@ -19,7 +20,7 @@
 		box-shadow: 0 2px #888;
 		background-color: white;
 		width: 100%;
-		margin-top: 41px;
+		margin-top: 3em;
 		width: 100%;
 		background-color: white;
 	}
