--- a/styles/details.css
+++ b/styles/details.css
@@ -33,7 +33,7 @@
 
 .dp-details .dp-details__dishName {
     text-transform: uppercase;
-    padding: 10px;
+    padding-top: 30px;
     padding-left: 30px;
 }
 
@@ -61,6 +61,7 @@
 
     .dp-details .dp-details__dishImage>img {
         width: 100%;
+        height: 300px;
     }
 }
 
@@ -68,18 +69,13 @@
     text-transform: capitalize;
     font-weight: 300;
     font-size: 12px;
-    padding: 30px;
-}
-
-@media (max-width: 767px) {
-    .dp-details .dp-details__description {
-        padding: 500px;
-    }
+    padding-left: 30px;
+    padding-top: 20px;
 }
 
 
 .dp-details .dp-details__backBtn {
-    padding: 30px;
+    padding-left: 30px;
 }
 
 .dp-details .dp-details__backBtn>a>button {
@@ -89,7 +85,7 @@
 
 @media (max-width: 767px) {
     .dp-details .dp-details__backBtn {
-        padding: 0 20px;
+        padding-bottom: 20px;
     }
 }
 
@@ -101,19 +97,15 @@
 
 }
 
-.dp-details .dp-details__ingredientsTable {
-    background-color: burlywood;
-    border-radius: 2px;
-}
-
-
 .dp-details .dp-details__ingredientsTitle {
-    padding: 30px;
-    margin-top: 20px;
+    text-transform: uppercase;
+    padding-top: 30px;
+    padding-left: 20px;
+    /* margin-top: 20px; */
 }
 
 .dp-details .dp-details__ingredientsContent {
-    padding-left: 10px;
+    padding-left: 30px;
 
 
 }
@@ -174,11 +166,17 @@
     justify-content: space-around;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 30px;
 
 }
 
 .dp-details .dp-details__addToMenu {
     display: flex;
     flex: 0.6;
-    padding-left: 10px;
 }
+
+.dp-details .dp-details__color {
+    background-color: burlywood;
+
+}
+
