--- a/styles/details.css
+++ b/styles/details.css
@@ -33,8 +33,14 @@
 
 .dp-details .dp-details__dishName {
     text-transform: uppercase;
-    padding-top: 30px;
-    padding-left: 30px;
+    padding: 30px 30px 0;
+}
+
+@media (max-width: 768px) {
+    .dp-details .dp-details__dishName {
+        text-transform: uppercase;
+        padding: 10px;
+    }
 }
 
 .dp-details .dp-details__dishName>h3 {
@@ -129,6 +135,7 @@
     flex: 0.4;
     font-weight: 300;
     font-size: 12px;
+    text-transform: lowercase;
 
 
 }
@@ -177,6 +184,12 @@
 
 .dp-details .dp-details__color {
     background-color: burlywood;
+    margin-top: 30px;
+}
 
+@media (max-width: 767px) {
+    .dp-details .dp-details__color {
+        margin: 0;
+    }
 }
 
