--- a/styles/details.css
+++ b/styles/details.css
@@ -55,8 +55,10 @@
 }
 
 .dp-details .dp-details__dishImage>img {
+    border-radius: 2px;
+    border: 1px solid #ccc;
     width: 100%;
-    max-height: 200px;
+    /* max-height: 200px; */
     object-fit: cover;
 }
 
@@ -66,23 +68,16 @@
     }
 
     .dp-details .dp-details__dishImage>img {
+        border: none;
         width: 100%;
         height: 300px;
     }
 }
 
 .dp-details .dp-details__description {
-    text-transform: capitalize;
     font-weight: 300;
-    font-size: 12px;
-    padding-left: 30px;
-    padding-top: 20px;
+    padding: 20px 30px;
 }
-
-.dp-details .dp-details__description>p {
-    text-transform: none;
-}
-
 
 .dp-details .dp-details__backBtn {
     padding-left: 30px;
@@ -186,15 +181,20 @@
     flex: 0.6;
 }
 
-.dp-details .dp-details__color {
-    background-color: #f2eecb;
+.dp-details .dp-details__card {
+    background-color: #ffffe5;
+    border: 1px solid #eee;
     box-shadow: 4px 4px #888;
-    margin-top: 30px;
+    margin: 20px;
 }
 
 @media (max-width: 767px) {
-    .dp-details .dp-details__color {
+    .dp-details .dp-details__card {
         margin: 0;
     }
+}
+
+.dp-details .dp-details__type {
+    text-transform: capitalize;
 }
 
