--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -103,6 +103,16 @@
 	justify-content: space-between;
 	margin: 5px;
 	padding: 3px 5px;
+	transition: box-shadow 100ms linear;
+}
+
+
+.dp-sidebar .dp-sidebar__link {
+	color:#000;
+}
+
+.dp-sidebar .dp-sidebar__link:hover {
+	text-decoration: none;
 }
 
 .dp-sidebar .dp-sidebar__dish-name {
@@ -113,4 +123,10 @@
 	flex: 1;
 	margin-left: 5px;
 	text-align: right;
+}
+
+
+.dp-sidebar .dp-sidebar__hvr-grow:hover {
+	box-shadow: 2px 2px #aaa;
+
 }
