--- a/styles/myDinner.css
+++ b/styles/myDinner.css
@@ -31,8 +31,7 @@
     max-width: 100%;
     height: 150px;
     object-fit: cover;
-    border: 2px solid;
-    margin: 0 20px;
+    padding-right: 30px;
 }
 
 @media (max-width: 767px) {
@@ -40,6 +39,7 @@
         flex: 1;
         height: 200px;
         border: none;
+        padding: 0px;
     }
 }
 
