--- a/styles/commons.css
+++ b/styles/commons.css
@@ -110,7 +110,7 @@
 }
 
 .dp-spinner-grow {
-	width: 1.5rem; 
+	width: 1.5rem;
 	height: 1.5rem;
 	background-color: #ffddc1;
 }
@@ -119,7 +119,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	background-color: #f44336; 
+	background-color: #f44336;
 	width: 100%;
 	height: 40px;
 	color: white;
@@ -135,4 +135,10 @@
 .dp-error-message {
 	text-align: center;
 	line-height: 1;
+}
+
+.dp-error-message.dp-error-message_main {
+	margin: 20px;
+	font-size: 20px;
+	font-weight: 500;
 }
